<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary"
    tools:context=".RegisterUserActivity">


    <LinearLayout
        android:background="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="56dp">


        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:elevation="5dp"
            android:lineSpacingExtra="10sp"
            android:text="@string/registration"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold"
            android:translationZ="15dp" />


        <!--FirstName-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/msg_RegisterUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name2"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPersonName"
                android:drawableStart="@drawable/ic_account_circle_black_24dp"


                />
        </android.support.design.widget.TextInputLayout>

        <!--LastName-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/msg_RegisterUserLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastname"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPostalAddress"
                android:drawableStart="@drawable/ic_account_circle_black_24dp"
                />
        </android.support.design.widget.TextInputLayout>


        <!-- Email &ndash-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">
            <EditText
                android:id="@+id/msg_RegisterUserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/ic_email_black_24dp"
                />
        </android.support.design.widget.TextInputLayout>



        <!--Contact-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">
            <EditText
                android:id="@+id/msg_RegisterUserContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contactnumber"
                android:maxLength="11"
                android:imeOptions="flagNoExtractUi"
                android:inputType="number"
                android:drawableStart="@drawable/ic_contacts_black_24dp"
                />
        </android.support.design.widget.TextInputLayout>



        <!--Cnic-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">
            <EditText
                android:id="@+id/msg_RegisterUserCnic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cnic_id"
                android:imeOptions="flagNoExtractUi"
                android:inputType="number"
                android:maxLength="13"
                android:drawableStart="@drawable/ic_perm_identity_black_24dp"
                />
        </android.support.design.widget.TextInputLayout>

        <!--Password-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">
            <EditText
                android:id="@+id/msg_RegisterUserpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                />
        </android.support.design.widget.TextInputLayout>


        <!--ConfirmPassword-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">
            <EditText
                android:id="@+id/msg_RegisterUserConfirmpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                />
        </android.support.design.widget.TextInputLayout>



        <Button
            android:id="@+id/msg_RegisterUserSignUpBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            android:text="@string/create_account"
            android:textColor="#ffffff"
            android:background="@color/colorPrimary"
            />


        <TextView
            android:id="@+id/msg_RegisterUserLinkLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/already_a_member_login"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="normal" />


    </LinearLayout>



</ScrollView>