<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#fff"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <TextView
        android:id="@+id/msg_User_Complaint_title"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/create_and_send_notifications_here"
        android:fontFamily="@font/cambay_italic"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="8sp"
        app:cardElevation="10sp">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/date"
                        android:textColor="#000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/msg_user_Notification_Date"
                        android:textColor="#000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/time"
                        android:textColor="#000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/msg_user_Notification_Time"
                        android:textColor="#000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/location"
                        android:textColor="#000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/msg_user_Complaint_Location"
                        android:textColor="#000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

        <EditText
            android:id="@+id/msg_admin_send_notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textLongMessage|textAutoCorrect"
            android:layout_margin="15sp"
            android:hint="@string/enter_alerts_or_notifications"
            />

        <Button
            android:id="@+id/msg_btn_notify"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:layout_marginBottom="24dp"
            android:background="@color/colorPrimary"
            android:padding="12dp"
            android:text="@string/generate_an_alert"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>