<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    android:layout_height="match_parent"
    tools:context=".ActivityUserSubmitComplains">

    <TextView
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/cambay_italic"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/sumbit_your_complains_here"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="8sp"
        app:cardElevation="10sp">

        <LinearLayout
            android:padding="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/msg_txt_user_complain_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4sp"
                android:fontFamily="@font/cambay_italic"
                android:gravity="left"
                android:text="Please Select Your Categories"
                android:textColor="#000"
                android:textStyle="bold" />


            <Spinner
                android:id="@+id/msg_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:entries="@array/complain_Array"
                android:outlineSpotShadowColor="@color/colorPrimary" />

            <EditText
                android:id="@+id/msg_txt_user_complain_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:hint="@string/enter_description"
                android:inputType="textLongMessage|textMultiLine" />

            <Button
                android:id="@+id/msg_btn_user_complain_submit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:background="@color/colorPrimary"
                android:padding="12dp"
                android:text="@string/submit"
                android:textColor="#ffffff"
                android:textStyle="bold" />


        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>