<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#fff"
    android:layout_height="match_parent"
    tools:context=".ActivityUserFeedback">


    <android.support.v7.widget.CardView
        android:id="@+id/AddDetail"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="25dp"
        android:translationZ="0dp"
        tools:ignore="UnusedAttribute">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
>


        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:lineSpacingExtra="10sp"
            android:padding="15dp"
            android:text="@string/feedback"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold"
            android:translationZ="15dp"
            tools:targetApi="lollipop" />




            <TextView
                android:id="@+id/msg_FeedbackUserDate"
                android:drawableEnd="@drawable/ic_date_range_black_24dp"
                android:text="@string/date"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:layout_marginEnd="3dp"
                android:layout_height="wrap_content"
                android:imeOptions="flagNoExtractUi"
                android:inputType="text|textMultiLine"
                tools:ignore="TextViewEdits" />


        <!--Feedback-->

            <EditText
                android:id="@+id/msg_FeedbackMessage"
                android:drawableEnd="@drawable/ic_message_black_24dp"
                android:hint="@string/enter_desccription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="flagNoExtractUi"
                android:inputType="text|textMultiLine" />



        <Button
            android:id="@+id/msg_FeedbackSubmitButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@color/colorPrimary"
            android:padding="12dp"
            android:text="@string/submit"
            android:textColor="#ffffff"
            android:textStyle="bold" />


    </LinearLayout>
    </android.support.v7.widget.CardView>

</ScrollView>