<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".LoginUserActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="56dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            >
            <ImageView
                android:id="@+id/msg_splashimage"
                android:src="@drawable/logo"
                android:layout_gravity="center"
                android:layout_width="250dp"
                android:layout_height="250dp"

                />
        </LinearLayout>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:elevation="5dp"
            android:lineSpacingExtra="10sp"

            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold"


            tools:ignore="UnusedAttribute" />


        <!--FirstName-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"

            >
            <EditText
                android:id="@+id/msg_LoginUserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/ic_account_circle_black_24dp"


                tools:ignore="TextFields" />
        </android.support.design.widget.TextInputLayout>



        <!--Password-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">
            <EditText
                android:id="@+id/msg_LoginUserpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPassword"

                android:drawableStart="@drawable/ic_lock_black_24dp"
                />


        </android.support.design.widget.TextInputLayout>
        <Switch
            android:id="@+id/msg_user_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:text="@string/admin" />

        <Button
            android:id="@+id/msg_LoginUserSignUpBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@color/colorPrimary"
            android:padding="12dp"
            android:text="@string/login"

            android:textColor="#ffffff"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/msg_LoginUserLinkLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/not_a_memeber_signup"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="normal" />


    </LinearLayout>


</ScrollView>